@@ -7,6 +7,9 @@ Changes for 3.5.0
 - Bug Fix (1132) - Increase ADC parser part limit to 6000 
 - Add installer support for kamioka,indigo,anu,uwa,cardiff,bham sites
 - Add awgtpman support for indigo,anu,uwa,cardiff,bham sites
+- Modifications to edcu.c:
+  - No longer hard coded dcuId: takes it from template model like all other FE code.
+  - Now synchonizes to IOP model on target computer: set sync=<iopmodelname> in model Param block.
 ==================================================================================================
 Changes for 3.4.3  
 ==================================================================================================
